Fix z-indexing on Toast

--- a/frontend/src/assets/sass/complaint.scss
+++ b/frontend/src/assets/sass/complaint.scss
@@ -343,7 +343,7 @@
 
 //Need these to make sure the filters show up on top of other frozen items
 .top-layer-select, .react-datepicker-popper {
-  z-index: 8000 !important;
+  z-index: 7000 !important;
 }
 
 .comp-details-edit-container {
@@ -926,6 +926,12 @@
 
 .display-none {
   display: none;
+}
+
+//Toasts Gets the top layer
+.Toastify {
+  z-index: 10000;
+  position: relative;
 }
 
 .Toastify__toast--error {
