--- a/frontend/src/assets/sass/layout.scss
+++ b/frontend/src/assets/sass/layout.scss
@@ -9,7 +9,7 @@
   position: fixed;
   width: 100%;
   top: 0;
-  z-index: 10000;
+  z-index: 9000;
 }
 
 .fixed-nav-header {
@@ -17,14 +17,14 @@
   padding-bottom: 0px !important;
   top: 72px; // Header (72px)
   background-color: $white;
-  z-index: 9000;
+  z-index: 8000;
 }
 
 .fixed-filter-header {
   position: sticky;
   top: 120px; // Header (72px) + Tabs (48px) 
   background-color: $white;
-  z-index: 7000;
+  z-index: 6000;
 }
 
 .fixed-table-header {
